@@ -1,5 +1,5 @@
 #############################################################################
-BETA PUBLIC RELEASE VERSION 1.4.0       9-16-08
+BETA PUBLIC RELEASE VERSION 1.4.0       10-20-08
 #############################################################################
  - NEW FEATURES
   * Updated html/master-index.html, deleted html/index.php.
@@ -41,6 +41,8 @@ BETA PUBLIC RELEASE VERSION 1.4.0       9-16-08
   * Updated NA.xml with HO2' added as an alternative name for H2'', and H5" 
     added as an alternative name for H5''. 
   * Updated version numbers in html/ and doc/pydoc/ .
+  * Updated web server. When selecting user-defined forcefield file from the 
+    web server, users should also provide .names file.  
 	
  -BUG FIXES
   * Fixed a legacy bug with the web server (web server doesn't like ligand 
